@@ -967,8 +967,11 @@ public abstract class ResultSetRow {
 						rollForward);
 			}
 		} catch (Exception ex) {
-			throw SQLError.createSQLException(ex.toString(),
+			SQLException sqlEx = SQLError.createSQLException(ex.toString(),
 					SQLError.SQL_STATE_ILLEGAL_ARGUMENT);
+			sqlEx.initCause(ex);
+			
+			throw sqlEx;
 		}
 	}
 
@@ -1315,10 +1318,13 @@ public abstract class ResultSetRow {
 				}
 			}
 		} catch (Exception e) {
-			throw new java.sql.SQLException("Cannot convert value '"
+			SQLException sqlEx = SQLError.createSQLException("Cannot convert value '"
 					+ getString(columnIndex, "ISO8859_1", conn)
 					+ "' from column " + (columnIndex + 1) + " to TIMESTAMP.",
 					SQLError.SQL_STATE_ILLEGAL_ARGUMENT);
+			sqlEx.initCause(e);
+			
+			throw sqlEx;
 		}
 	}
 
