@@ -96,6 +96,10 @@ nn-nn-08 - Version 5.1.6
       conditions where one thread that has created a connection "shares" it with other
       threads if the connection is reconnected due to auto-reconnect functionality.
       
+    - For any SQLException caused by another Throwable, besides dumping the message or stack
+      trace as a string into the message, set the underlying Throwable as the cause for
+      the SQLException, making it accessible via getCause().
+      
 10-09-07 - Version 5.1.5
 
     - Released instead of 5.1.4 to pickup patch for BUG#31053
